@@ -1,9 +1,9 @@
-# Copyright (c) 2021 Patricio Cubillos
-# puppies is open-source software under the MIT license (see LICENSE)
+# Copyright (c) 2021-2024 Patricio Cubillos
+# puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 __all__ = [
-    "photom",
-     ]
+    'photom',
+]
 
 import os
 import time
@@ -12,9 +12,6 @@ import copy
 import multiprocessing as mp
 
 import numpy as np
-#import timer       as t
-#import psf_fit     as pf
-#import optphot     as op
 
 from .. import image as im
 from .. import io as io
@@ -22,12 +19,6 @@ from .. import photometry as ph
 from .. import plots as pp
 from .. import tools as pt
 
-
-def update(pup, cfile):
-  """
-  Update user parameters for photometry from configuration file,
-  and check that all necessary values are well defined.
-  """
 
 def photom(pup, cfile=None):
     """
@@ -76,29 +67,27 @@ def photom(pup, cfile=None):
             pt.error("'skyout' and 'photap' have inconsistent lengths.")
         pup.skyout = np.repeat(pup.skyout, len(pup.photap))
 
-
     nruns = len(pup.photap)
-    # Loop over each run:
     for i in range(nruns):
         # Make a copy of the event:
         puppy = copy.copy(pup)
         puppy.photap = pup.photap[i]
-        puppy.skyin  = pup.skyin [i]
+        puppy.skyin  = pup.skyin[i]
         puppy.skyout = pup.skyout[i]
 
         # Folder suffix when necessary:
-        folder = ""
         if puppy.photap != 'optimal':
-            folder += (
-                f'aper{puppy.photap*100:03.0f}'
-                f'{puppy.skyin:02.0f}{puppy.skyout:02.0f}')
+            ap_name = f'{puppy.photap*100:03.0f}'
+            sky_in = f'{puppy.skyin:02.0f}'
+            sky_out = f'{puppy.skyout:02.0f}'
+            folder = f'aper{ap_name}{sky_in}{sky_out}'
         else:
             folder = puppy.photap
 
         # Move into photometry folder:
-        puppy.folder = f"{puppy.folder}/{folder}"
+        puppy.folder = f'{puppy.folder}/{folder}'
         os.chdir(cwd)
-        if not os.path.exists(puppy.folder):  # Create directory if necessary
+        if not os.path.exists(puppy.folder):
             os.mkdir(puppy.folder)
         os.chdir(puppy.folder)
 
@@ -114,7 +103,7 @@ def photometry(pup, data, uncert, mask):
     """
     Doc me.
     """
-    #tini = time.time()
+    fp = pup.fp
 
     if isinstance(pup.photap, float):
         photom = f"aperture {pup.photap:.2f}"
@@ -123,19 +112,15 @@ def photometry(pup, data, uncert, mask):
 
     # Copy, update, and reopen logfile:
     shutil.copy(pup.logfile, pup.folder)
-    pup.logfile = "{:s}/{:s}.log".format(pup.folder, pup.ID)
-    pup.log = open(pup.logfile, "a")
-    pt.msg(1,
-        f"\n\n{70*':'}\nStarting {photom} photometry  ({time.ctime()})\n\n",
-        pup.log)
-
-    # Copy photom.pcf in photdir
-    #pcf.make_file("photom.pcf")
+    pup.logfile = f"{pup.folder}/{pup.ID}.log"
+    log = pup.log = pt.Log(pup.logfile, append=True)
+    log.msg(
+        f"\n\n{log.sep}\nStarting {photom} photometry  ({time.ctime()})\n\n"
+    )
 
     nframes = pup.inst.nframes
     # Aperture photometry:
     if pup.photap != "optimal":
-        # Multiprocess set up:
         aplev = mp.Array("d", np.zeros(nframes))  # aperture flux
         aperr = mp.Array("d", np.zeros(nframes))  # aperture error
         nappix = mp.Array("d", np.zeros(nframes))  # number of aperture pixels
@@ -144,57 +129,63 @@ def photometry(pup, data, uncert, mask):
         nskypix = mp.Array("d", np.zeros(nframes))  # number of sky pixels
         nskyideal = mp.Array("d", np.zeros(nframes))  # ideal sky pixels
         status = mp.Array("i", np.zeros(nframes, int))   # apphot return status
-        good   = mp.Array("b", np.zeros(nframes, bool))  # good photometry flag
+        good = mp.Array("b", np.zeros(nframes, bool))  # good photometry flag
         # FINDME: Move this allocation out of the if?
 
         # Size of chunk of data each core will process:
         chunksize = int(nframes/pup.ncpu + 1)
-        pt.msg(1,
-            f"Number of parallel CPUs for photometry: {pup.ncpu}.", pup.log)
+        log.msg(f"Number of parallel CPUs for photometry: {pup.ncpu}.")
 
+        pup_data = [
+            pup.fp,
+            pup.inst.nframes,
+            pup.photap,
+            pup.skyin,
+            pup.skyout,
+            pup.skyfrac,
+            pup.expand,
+            pup.skymed,
+            pup.ncpu,
+        ]
         # Start Muti Procecess:
         processes = []
         for n in range(pup.ncpu):
             start =  n    * chunksize
             end   = (n+1) * chunksize
             args = (
-                pup, data, uncert, mask, start, end, aplev, aperr, nappix,
-                skylev, skyerr, nskypix, nskyideal, status, good)
+                pup_data, data, uncert, mask, start, end, aplev, aperr, nappix,
+                skylev, skyerr, nskypix, nskyideal, status, good,
+            )
             proc = mp.Process(target=calc_photom, args=args)
             processes.append(proc)
             proc.start()
-        # Make sure all processes finish their work:
         for n in range(pup.ncpu):
             processes[n].join()
 
         # Put the results in the event. I need to reshape them:
-        pup.fp.aplev     = np.array(aplev)
-        pup.fp.aperr     = np.array(aperr)
-        pup.fp.nappix    = np.array(nappix)
-        pup.fp.skylev    = np.array(skylev)
-        pup.fp.skyerr    = np.array(skyerr)
-        pup.fp.nskypix   = np.array(nskypix)
-        pup.fp.nskyideal = np.array(nskyideal)
-        pup.fp.status    = np.array(status)
-        pup.fp.goodphot  = np.array(good, bool)
+        fp.aplev = np.array(aplev)
+        fp.aperr = np.array(aperr)
+        fp.nappix = np.array(nappix)
+        fp.skylev = np.array(skylev)
+        fp.skyerr = np.array(skyerr)
+        fp.nskypix = np.array(nskypix)
+        fp.nskyideal = np.array(nskyideal)
+        fp.status = np.array(status)
+        fp.goodphot = np.array(good, bool)
         # Overwrite good with goodphot:
-        pup.fp.good = np.copy(pup.fp.goodphot)
+        fp.good = np.copy(fp.goodphot)
 
         # Raw photometry (star + sky flux within the aperture):
-        pup.fp.apraw = pup.fp.aplev + pup.fp.skylev*pup.fp.nappix
+        fp.apraw = fp.aplev + fp.skylev*fp.nappix
 
-    # FINDME: Make this a multiprocessing task as well.
     elif pup.photap == "optimal":
         # utils for profile construction:
         pshape = np.array([2*pup.otrim+1, 2*pup.otrim+1])
         subpsf = np.zeros(np.asarray(pshape, float)*pup.expand)
-        #x = np.indices(pshape)
-        #clock = t.Timer(np.sum(pup.nimpos),
-        #                progress=np.array([0.05, 0.1, 0.25, 0.5, 0.75, 1.1]))
 
         for i in range(nframes):
             # Integer part of center of subimage:
-            cen = np.rint([pup.fp.y[i], pup.fp.x[i]])
+            cen = np.rint([fp.y[i], fp.x[i]])
             # Center in the trimed image:
             loc = (pup.otrim, pup.otrim)
             # Do the trim:
@@ -203,133 +194,142 @@ def photometry(pup, data, uncert, mask):
 
             # Center of star in the subimage:
             ctr = (
-                pup.fp.y[i]-cen[0]+pup.otrim,
-                pup.fp.x[i]-cen[1]+pup.otrim)
+                fp.y[i]-cen[0]+pup.otrim,
+                fp.x[i]-cen[1]+pup.otrim,
+            )
             # Make profile:
             # Index of the position in the supersampled PSF:
-            pix = pf.pos2index(ctr, pup.expand)
-            profile, pctr = pf.make_psf_binning(
+            pix = ph.position_to_index(ctr, pup.expand)
+            profile, pctr = ph.make_psf_binning(
                 pup.psfim, pshape, pup.expand,
                 [pix[0], pix[1], 1.0, 0.0],
-                pup.psfctr, subpsf)
+                pup.psfctr, subpsf,
+            )
 
             # Subtract the sky level:
-            img -= pup.fp.skylev[i]
+            img -= fp.skylev[i]
             # optimal photometry calculation:
-            immean, imerr, good = op.optphot(
-                img, profile, var=err**2.0, mask=msk)
-            # FINDME: Not fitting the sky at the same time? I dont like this
+            immean, imerr, good = ph.optimal_photometry(
+                img, profile, var=err**2.0, mask=msk,
+            )
+            # TBD: Does not fit the sky at the same time
 
-            pup.fp.aplev[i] = immean
-            pup.fp.aperr[i] = imerr
-            pup.fp.skylev[i] = pup.fp.skylev[i]
-            pup.fp.good[i] = good
-
-            # Report progress:
-            #clock.check(np.sum(pup.nimpos[0:pos]) + i, name=pup.folder)
+            fp.aplev[i] = immean
+            fp.aperr[i] = imerr
+            fp.skylev[i] = fp.skylev[i]
+            fp.good[i] = good
 
     # Print results into the log:
     for i in range(nframes):
-        pt.msg(1, '\nframe = {:11d}  pos ={:3d}  status ={:3d}  good ={:3d}\n'
-          'aplev = {:11.3f}  skylev = {:7.3f}  nappix    = {:7.2f}\n'
-          'aperr = {:11.3f}  skyerr = {:7.3f}  nskypix   = {:7.2f}\n'
-          'y     = {:11.3f}  x      = {:7.3f}  nskyideal = {:7.2f}\n'
-           .format(i, pup.fp.pos[i], pup.fp.status[i], pup.fp.good[i],
-             pup.fp.aplev[i], pup.fp.skylev[i], pup.fp.nappix [i],
-             pup.fp.aperr[i], pup.fp.skyerr[i], pup.fp.nskypix[i],
-             pup.fp.y[i],     pup.fp.x[i],      pup.fp.nskyideal[i]),
-               pup.log)
+        log.msg(
+            f'\nframe = {i:11d}  pos ={fp.pos[i]:3d}  '
+            f'status ={fp.status[i]:3d}  good ={fp.good[i]:3d}\n'
+            f'aplev = {fp.aplev[i]:11.3f}  skylev = {fp.skylev[i]:7.3f}  '
+            f'nappix    = {fp.nappix[i]:7.2f}\n'
+            f'aperr = {fp.aperr[i]:11.3f}  skyerr = {fp.skyerr[i]:7.3f}  '
+            f'nskypix   = {fp.nskypix[i]:7.2f}\n'
+            f'y     = {fp.y[i]:11.3f}  x      = {fp.x[i]:7.3f}  '
+            f'nskyideal = {fp.nskyideal[i]:7.2f}\n'
+        )
 
     if pup.centering in ["bpf"]:
         pup.ispsf = False
 
     if os.path.isfile(pup.psf) and isinstance(pup.photap, float):
         # PSF aperture correction:
-        pt.msg(1, 'Calculating PSF aperture.', pup.log)
+        log.msg('Calculating PSF aperture.')
         pup.psfim = pup.psfim.astype(np.float64)
 
         imerr = np.ones(np.shape(pup.psfim))
         imask = np.ones(np.shape(pup.psfim), bool)
         skyfrac = 0.1
-        pup.psffrac, aperr, psfnappix,  pup.psfskylev, skyerr, \
-           psfnskypix, psfnskyideal, pup.psfstatus  \
-                       = ph.aphot(pup.psfim, imerr, imask,
-                                     pup.psfctr[0], pup.psfctr[1],
-                                     pup.photap * pup.psfexpand,
-                                     pup.skyin  * pup.psfexpand,
-                                     pup.skyout * pup.psfexpand,
-                                     skyfrac, pup.expand, pup.skymed)
+        ap_photometry = ph.aphot(
+            pup.psfim, imerr, imask,
+            pup.psfctr[0],
+            pup.psfctr[1],
+            pup.photap * pup.psfexpand,
+            pup.skyin  * pup.psfexpand,
+            pup.skyout * pup.psfexpand,
+            skyfrac, pup.expand, pup.skymed,
+        )
+        pup.psffrac = ap_photometry[0]
+        aperr = ap_photometry[1]
+        psfnappix = ap_photometry[2]
+        pup.psfskylev = ap_photometry[3]
+        skyerr = ap_photometry[4]
+        #psfnskypix = ap_photometry[5]
+        #psfnskyideal = ap_photometry[6]
+        pup.psfstatus = ap_photometry[7]
 
         # Fraction of the PSF contained in the aperture:
         pup.psffrac += pup.psfskylev * psfnappix
         pup.fp.aplev /= pup.psffrac
         pup.fp.aperr /= pup.psffrac
 
-        pt.msg(1, f'Aperture contains {pup.psffrac:.4f} of the PSF.', pup.log)
+        log.msg(f'Aperture contains {pup.psffrac:.4f} of the PSF.')
 
     # Make some plots:
     pp.rawflux(
         pup.fp.aplev, pup.fp.aperr, pup.fp.phase, pup.fp.good,
-        pup.folder, units=str(pup.units))
+        pup.folder, units=str(pup.units),
+    )
     pp.background(
-        pup.fp.skylev, pup.fp.phase, pup.fp.good, pup.folder, str(pup.units))
+        pup.fp.skylev, pup.fp.phase, pup.fp.good, pup.folder, str(pup.units),
+    )
 
     # Print time stamp, save, and close:
-    pt.msg(1,
+    log.msg(
         f"\nFinished {pup.centering} photometry ({time.ctime()}).\n"
-        f"Output folder: '{pup.folder}/'.\n", pup.log)
+        f"Output folder: '{pup.folder}/'.\n"
+    )
     io.save(pup)
 
 
-def calc_photom(pup, data, uncert, mask, start, end,
-    aplev, aperr, nappix, skylev, skyerr, nskypix, nskyideal,
-    status, good, mute=True):
+def calc_photom(
+        pup_data, data, uncert, mask, start, end,
+        aplev, aperr, nappix, skylev, skyerr, nskypix, nskyideal,
+        status, good, mute=True,
+    ):
     """
-    Edit (fix) this docstring:
     Medium level routine that performs aperture photometry.
     Each thread from the main routine (photometry) will run do_aphot once.
     do_aphot stores the values in the shared memory arrays.
     """
-    # Initialize a Timer to report progress (use first Process):
-    if start == 0:
-        #clock = t.Timer(pup.inst.nframes,
-        #                progress=np.array([0.05, 0.1, 0.25, 0.5, 0.75, 1.1]))
-        pass
-
-    y, x = pup.fp.y, pup.fp.x
+    fp, nframes, photap, skyin, skyout, skyfrac, expand, skymed, \
+        ncpu = pup_data
+    y, x = fp.y, fp.x
 
     # Recalculate star and end indexes. Care not to go out of bounds:
-    end = np.amin([end, pup.inst.nframes])
+    end = np.amin([end, nframes])
 
     for i in range(start, end):
-        if pup.fp.good[i]:
+        if fp.good[i]:
             # Calculate aperture photometry:
             aperture_photometry = ph.aphot(
                 data[i], uncert[i], mask[i], y[i], x[i],
-                pup.photap,  pup.skyin,   pup.skyout,
-                pup.skyfrac, pup.expand, pup.skymed)
-
-            aplev[i], aperr[i], nappix[i], skylev[i], skyerr[i], \
-                nskypix[i], nskyideal[i], status[i] = aperture_photometry
-            good[i] = status[i]==0  # good flag
+                photap, skyin, skyout,
+                skyfrac, expand, skymed,
+            )
+            aplev[i] = aperture_photometry[0]
+            aperr[i] = aperture_photometry[1]
+            nappix[i] = aperture_photometry[2]
+            skylev[i] = aperture_photometry[3]
+            skyerr[i] = aperture_photometry[4]
+            nskypix[i] = aperture_photometry[5]
+            nskyideal[i] = aperture_photometry[6]
+            status[i] = aperture_photometry[7]
+            good[i] = status[i]==0
 
             # Print to screen only if one core:
-            if pup.ncpu == 1 and not mute:
-                pt.msg(1,
-                    f'\nframe = {i:11d}  pos ={pup.fp.pos[i]:3d}  '
+            if ncpu == 1 and not mute:
+                print(
+                    f'\nframe = {i:11d}  pos ={fp.pos[i]:3d}  '
                     f'status ={status[i]:3d}  good ={good[i]:3d}\n'
                     f'aplev = {aplev[i]:11.3f}  skylev = {skylev[i]:7.3f}  '
                     f'nappix    = {nappix[i]:7.2f}\n'
                     f'aperr = {aperr[i]:11.3f}  skyerr = {skyerr[i]:7.3f}  '
                     f'nskypix   = {nskypix[i]:7.2f}\n'
                     f'y     = {y[i]:11.3f}  x      = {x[i]:7.3f}  '
-                    f'nskyideal = {nskyideal[i]:7.2f}\n', pup.log)
+                    f'nskyideal = {nskyideal[i]:7.2f}\n'
+                )
 
-        #perc = 100.0*(i+1.0)/np.sum(pup.inst.nframes)
-        #hms = clock.hms_left(np.sum(pup.nimpos[0:pos]) + i)
-        #print("progress: {:6.2f}%  -  Remaining time (h:m:s): {}.".
-        #      format(perc, hms))
-
-        if start == 0:
-            #clock.check(pos*end + i, name=pup.folder)
-            pass
