@@ -1,5 +1,5 @@
-# Copyright (c) 2021 Patricio Cubillos
-# puppies is open-source software under the MIT license (see LICENSE)
+# Copyright (c) 2021-2024 Patricio Cubillos
+# puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 import sys
 import os
@@ -8,7 +8,26 @@ from puppies.tools import ROOT
 sys.path.append(f'{ROOT}puppies/lib')
 from _aphot import aphot
 
-__all__ = ["aphot"]
+__all__ = [
+    'aphot',
+    'psf_binning',
+    'position_to_index',
+    'optimal_photometry',
+]
+
+def psf_binning(*args):
+    """PSF routines"""
+    raise NotImplementedError
+
+
+def position_to_index(*args):
+    """PSF routines"""
+    raise NotImplementedError
+
+def optimal_photometry(*args, **kwargs):
+    """PSF routines"""
+    raise NotImplementedError
+
 
 
 # Clean up top-level namespace--delete everything that isn't in __all__
